--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </header>
+  
+  
 
 
 
@@ -30,7 +32,7 @@
 
         <li><a href="#" id="cc1">abaisser</a></li>
         <li><a href="#" id="cc2">abandonner</a></li>
-        <li><a href="#" id="cc3">abîmer</a></li>
+        <li><a href="#" id="cc3">abÃ®mer</a></li>
         <li><a href="#" id="cc4">absorber</a></li>
         <li><a href="#" id="cc5">abuser</a></li>
         <li><a href="#" id="cc6">accepter</a></li>
