changed accent and who

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 <header>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
@@ -50,7 +50,7 @@
 <table class="table table-striped">
 <tbody>
 <tr>
-  <td>Present</td>
+  <td>Présent</td>
   <td>Future simple</td>
 </tr>
 <tr>
@@ -82,7 +82,7 @@
   <td>Subjonctif</td>
 </tr>
 <tr>
-  <td>Passe compose</td>
+  <td>Passé compose</td>
   <td  id="aa_e1"></td>
 </tr>
 <tr>
@@ -107,10 +107,10 @@
 </tr>
 <tr>
   <td>Imparfait</td>
-  <td>Conditionner</td>
+  <td>Conditionnel</td>
 </tr>
 <tr>
-  <td>i was doing, i used to do</td>
+  <td>(I was doing, i used to do)</td>
   <td id="aa_g1"></td>
 </tr>
 <tr>
@@ -135,7 +135,7 @@
 </tr>
 <tr>
   <td id="aa_c6"></td>
-  <td>imperatif</td>
+  <td>Impératif</td>
 </tr>
 <tr>
   <td></td>
@@ -201,40 +201,40 @@
           var cc = bb.responseXML;
           aa_verb.innerHTML=cc.getElementsByTagName("verb").item(i).textContent;
           aa_meaning.innerHTML=cc.getElementsByTagName("meaning").item(i).textContent;
-          aa_a1.innerHTML=cc.getElementsByTagName("a1").item(i).textContent;
-          aa_a2.innerHTML=cc.getElementsByTagName("a2").item(i).textContent;
-          aa_a3.innerHTML=cc.getElementsByTagName("a3").item(i).textContent;
-          aa_a4.innerHTML=cc.getElementsByTagName("a4").item(i).textContent;
-          aa_a5.innerHTML=cc.getElementsByTagName("a5").item(i).textContent;
-          aa_a6.innerHTML=cc.getElementsByTagName("a6").item(i).textContent;
-          aa_b1.innerHTML=cc.getElementsByTagName("b1").item(i).textContent;
-          aa_c1.innerHTML=cc.getElementsByTagName("c1").item(i).textContent;
-          aa_c2.innerHTML=cc.getElementsByTagName("c2").item(i).textContent;
-          aa_c3.innerHTML=cc.getElementsByTagName("c3").item(i).textContent;
-          aa_c4.innerHTML=cc.getElementsByTagName("c4").item(i).textContent;
-          aa_c5.innerHTML=cc.getElementsByTagName("c5").item(i).textContent;
-          aa_c6.innerHTML=cc.getElementsByTagName("c6").item(i).textContent;
-          aa_d1.innerHTML=cc.getElementsByTagName("d1").item(i).textContent;
-          aa_d2.innerHTML=cc.getElementsByTagName("d2").item(i).textContent;
-          aa_d3.innerHTML=cc.getElementsByTagName("d3").item(i).textContent;
-          aa_d4.innerHTML=cc.getElementsByTagName("d4").item(i).textContent;
-          aa_d5.innerHTML=cc.getElementsByTagName("d5").item(i).textContent;
-          aa_d6.innerHTML=cc.getElementsByTagName("d6").item(i).textContent;
-          aa_e1.innerHTML=cc.getElementsByTagName("e1").item(i).textContent;
-          aa_e2.innerHTML=cc.getElementsByTagName("e2").item(i).textContent;
-          aa_e3.innerHTML=cc.getElementsByTagName("e3").item(i).textContent;
-          aa_e4.innerHTML=cc.getElementsByTagName("e4").item(i).textContent;
-          aa_e5.innerHTML=cc.getElementsByTagName("e5").item(i).textContent;
-          aa_e6.innerHTML=cc.getElementsByTagName("e6").item(i).textContent;
-          aa_f1.innerHTML=cc.getElementsByTagName("f1").item(i).textContent;
-          aa_f2.innerHTML=cc.getElementsByTagName("f2").item(i).textContent;
-          aa_f3.innerHTML=cc.getElementsByTagName("f3").item(i).textContent;
-          aa_g1.innerHTML=cc.getElementsByTagName("g1").item(i).textContent;
-          aa_g2.innerHTML=cc.getElementsByTagName("g2").item(i).textContent;
-          aa_g3.innerHTML=cc.getElementsByTagName("g3").item(i).textContent;
-          aa_g4.innerHTML=cc.getElementsByTagName("g4").item(i).textContent;
-          aa_g5.innerHTML=cc.getElementsByTagName("g5").item(i).textContent;
-          aa_g6.innerHTML=cc.getElementsByTagName("g6").item(i).textContent;
+          aa_a1.innerHTML="j’ " +cc.getElementsByTagName("a1").item(i).textContent;
+          aa_a2.innerHTML="tu " +cc.getElementsByTagName("a2").item(i).textContent;
+          aa_a3.innerHTML="il " +cc.getElementsByTagName("a3").item(i).textContent;
+          aa_a4.innerHTML="nous " +cc.getElementsByTagName("a4").item(i).textContent;
+          aa_a5.innerHTML="vous " +cc.getElementsByTagName("a5").item(i).textContent;
+          aa_a6.innerHTML="ils " +cc.getElementsByTagName("a6").item(i).textContent;
+          aa_b1.innerHTML=" " +cc.getElementsByTagName("b1").item(i).textContent;
+          aa_c1.innerHTML="j’ " +cc.getElementsByTagName("c1").item(i).textContent;
+          aa_c2.innerHTML="tu " +cc.getElementsByTagName("c2").item(i).textContent;
+          aa_c3.innerHTML="il " +cc.getElementsByTagName("c3").item(i).textContent;
+          aa_c4.innerHTML="nous " +cc.getElementsByTagName("c4").item(i).textContent;
+          aa_c5.innerHTML="vous " +cc.getElementsByTagName("c5").item(i).textContent;
+          aa_c6.innerHTML="ils " +cc.getElementsByTagName("c6").item(i).textContent;
+          aa_d1.innerHTML="j’ " +cc.getElementsByTagName("d1").item(i).textContent;
+          aa_d2.innerHTML="tu " +cc.getElementsByTagName("d2").item(i).textContent;
+          aa_d3.innerHTML="il " +cc.getElementsByTagName("d3").item(i).textContent;
+          aa_d4.innerHTML="nous " +cc.getElementsByTagName("d4").item(i).textContent;
+          aa_d5.innerHTML="vous " +cc.getElementsByTagName("d5").item(i).textContent;
+          aa_d6.innerHTML="ils " +cc.getElementsByTagName("d6").item(i).textContent;
+          aa_e1.innerHTML="j’ " +cc.getElementsByTagName("e1").item(i).textContent;
+          aa_e2.innerHTML="tu " +cc.getElementsByTagName("e2").item(i).textContent;
+          aa_e3.innerHTML="il " +cc.getElementsByTagName("e3").item(i).textContent;
+          aa_e4.innerHTML="nous " +cc.getElementsByTagName("e4").item(i).textContent;
+          aa_e5.innerHTML="vous " +cc.getElementsByTagName("e5").item(i).textContent;
+          aa_e6.innerHTML="ils " +cc.getElementsByTagName("e6").item(i).textContent;
+          aa_f1.innerHTML=" " +cc.getElementsByTagName("f1").item(i).textContent;
+          aa_f2.innerHTML=" " +cc.getElementsByTagName("f2").item(i).textContent;
+          aa_f3.innerHTML=" " +cc.getElementsByTagName("f3").item(i).textContent;
+          aa_g1.innerHTML=""j’ " +cc.getElementsByTagName("g1").item(i).textContent;
+          aa_g2.innerHTML="tu " +cc.getElementsByTagName("g2").item(i).textContent;
+          aa_g3.innerHTML="il " +cc.getElementsByTagName("g3").item(i).textContent;
+          aa_g4.innerHTML="nous " +cc.getElementsByTagName("g4").item(i).textContent;
+          aa_g5.innerHTML="vous " +cc.getElementsByTagName("g5").item(i).textContent;
+          aa_g6.innerHTML="ils " +cc.getElementsByTagName("g6").item(i).textContent;
       }}
       bb.open("GET", "output.xml", true);
       bb.send();}
