--- a/index.html
+++ b/index.html
@@ -201,40 +201,40 @@
           var cc = bb.responseXML;
           aa_verb.innerHTML=cc.getElementsByTagName("verb").item(i).textContent;
           aa_meaning.innerHTML=cc.getElementsByTagName("meaning").item(i).textContent;
-          aa_a1.innerHTML="j’ " +cc.getElementsByTagName("a1").item(i).textContent;
-          aa_a2.innerHTML="tu " +cc.getElementsByTagName("a2").item(i).textContent;
-          aa_a3.innerHTML="il " +cc.getElementsByTagName("a3").item(i).textContent;
-          aa_a4.innerHTML="nous " +cc.getElementsByTagName("a4").item(i).textContent;
-          aa_a5.innerHTML="vous " +cc.getElementsByTagName("a5").item(i).textContent;
-          aa_a6.innerHTML="ils " +cc.getElementsByTagName("a6").item(i).textContent;
-          aa_b1.innerHTML=" " +cc.getElementsByTagName("b1").item(i).textContent;
-          aa_c1.innerHTML="j’ " +cc.getElementsByTagName("c1").item(i).textContent;
-          aa_c2.innerHTML="tu " +cc.getElementsByTagName("c2").item(i).textContent;
-          aa_c3.innerHTML="il " +cc.getElementsByTagName("c3").item(i).textContent;
-          aa_c4.innerHTML="nous " +cc.getElementsByTagName("c4").item(i).textContent;
-          aa_c5.innerHTML="vous " +cc.getElementsByTagName("c5").item(i).textContent;
-          aa_c6.innerHTML="ils " +cc.getElementsByTagName("c6").item(i).textContent;
-          aa_d1.innerHTML="j’ " +cc.getElementsByTagName("d1").item(i).textContent;
-          aa_d2.innerHTML="tu " +cc.getElementsByTagName("d2").item(i).textContent;
-          aa_d3.innerHTML="il " +cc.getElementsByTagName("d3").item(i).textContent;
-          aa_d4.innerHTML="nous " +cc.getElementsByTagName("d4").item(i).textContent;
-          aa_d5.innerHTML="vous " +cc.getElementsByTagName("d5").item(i).textContent;
-          aa_d6.innerHTML="ils " +cc.getElementsByTagName("d6").item(i).textContent;
-          aa_e1.innerHTML="j’ " +cc.getElementsByTagName("e1").item(i).textContent;
-          aa_e2.innerHTML="tu " +cc.getElementsByTagName("e2").item(i).textContent;
-          aa_e3.innerHTML="il " +cc.getElementsByTagName("e3").item(i).textContent;
-          aa_e4.innerHTML="nous " +cc.getElementsByTagName("e4").item(i).textContent;
-          aa_e5.innerHTML="vous " +cc.getElementsByTagName("e5").item(i).textContent;
-          aa_e6.innerHTML="ils " +cc.getElementsByTagName("e6").item(i).textContent;
-          aa_f1.innerHTML=" " +cc.getElementsByTagName("f1").item(i).textContent;
-          aa_f2.innerHTML=" " +cc.getElementsByTagName("f2").item(i).textContent;
-          aa_f3.innerHTML=" " +cc.getElementsByTagName("f3").item(i).textContent;
-          aa_g1.innerHTML=""j’ " +cc.getElementsByTagName("g1").item(i).textContent;
-          aa_g2.innerHTML="tu " +cc.getElementsByTagName("g2").item(i).textContent;
-          aa_g3.innerHTML="il " +cc.getElementsByTagName("g3").item(i).textContent;
-          aa_g4.innerHTML="nous " +cc.getElementsByTagName("g4").item(i).textContent;
-          aa_g5.innerHTML="vous " +cc.getElementsByTagName("g5").item(i).textContent;
-          aa_g6.innerHTML="ils " +cc.getElementsByTagName("g6").item(i).textContent;
+          aa_a1.innerHTML= "j’ " +cc.getElementsByTagName("a1").item(i).textContent;
+          aa_a2.innerHTML= "tu " +cc.getElementsByTagName("a2").item(i).textContent;
+          aa_a3.innerHTML= "il " +cc.getElementsByTagName("a3").item(i).textContent;
+          aa_a4.innerHTML= "nous " +cc.getElementsByTagName("a4").item(i).textContent;
+          aa_a5.innerHTML= "vous " +cc.getElementsByTagName("a5").item(i).textContent;
+          aa_a6.innerHTML= "ils " +cc.getElementsByTagName("a6").item(i).textContent;
+          aa_b1.innerHTML= " " +cc.getElementsByTagName("b1").item(i).textContent;
+          aa_c1.innerHTML= "j’ " +cc.getElementsByTagName("c1").item(i).textContent;
+          aa_c2.innerHTML= "tu " +cc.getElementsByTagName("c2").item(i).textContent;
+          aa_c3.innerHTML= "il " +cc.getElementsByTagName("c3").item(i).textContent;
+          aa_c4.innerHTML= "nous " +cc.getElementsByTagName("c4").item(i).textContent;
+          aa_c5.innerHTML= "vous " +cc.getElementsByTagName("c5").item(i).textContent;
+          aa_c6.innerHTML= "ils " +cc.getElementsByTagName("c6").item(i).textContent;
+          aa_d1.innerHTML= "j’ " +cc.getElementsByTagName("d1").item(i).textContent;
+          aa_d2.innerHTML= "tu " +cc.getElementsByTagName("d2").item(i).textContent;
+          aa_d3.innerHTML= "il " +cc.getElementsByTagName("d3").item(i).textContent;
+          aa_d4.innerHTML= "nous " +cc.getElementsByTagName("d4").item(i).textContent;
+          aa_d5.innerHTML= "vous " +cc.getElementsByTagName("d5").item(i).textContent;
+          aa_d6.innerHTML= "ils " +cc.getElementsByTagName("d6").item(i).textContent;
+          aa_e1.innerHTML= "j’ " +cc.getElementsByTagName("e1").item(i).textContent;
+          aa_e2.innerHTML= "tu " +cc.getElementsByTagName("e2").item(i).textContent;
+          aa_e3.innerHTML= "il " +cc.getElementsByTagName("e3").item(i).textContent;
+          aa_e4.innerHTML= "nous " +cc.getElementsByTagName("e4").item(i).textContent;
+          aa_e5.innerHTML= "vous " +cc.getElementsByTagName("e5").item(i).textContent;
+          aa_e6.innerHTML= "ils " +cc.getElementsByTagName("e6").item(i).textContent;
+          aa_f1.innerHTML= " " +cc.getElementsByTagName("f1").item(i).textContent;
+          aa_f2.innerHTML= " " +cc.getElementsByTagName("f2").item(i).textContent;
+          aa_f3.innerHTML= " " +cc.getElementsByTagName("f3").item(i).textContent;
+          aa_g1.innerHTML= "j’ " +cc.getElementsByTagName("g1").item(i).textContent;
+          aa_g2.innerHTML= "tu " +cc.getElementsByTagName("g2").item(i).textContent;
+          aa_g3.innerHTML= "il " +cc.getElementsByTagName("g3").item(i).textContent;
+          aa_g4.innerHTML= "nous " +cc.getElementsByTagName("g4").item(i).textContent;
+          aa_g5.innerHTML= "vous " +cc.getElementsByTagName("g5").item(i).textContent;
+          aa_g6.innerHTML= "ils " +cc.getElementsByTagName("g6").item(i).textContent;
       }}
       bb.open("GET", "output.xml", true);
       bb.send();}
