fixed que section

--- a/index.html
+++ b/index.html
@@ -220,12 +220,12 @@
           aa_d4.innerHTML= "nous " +cc.getElementsByTagName("d4").item(i).textContent;
           aa_d5.innerHTML= "vous " +cc.getElementsByTagName("d5").item(i).textContent;
           aa_d6.innerHTML= "ils " +cc.getElementsByTagName("d6").item(i).textContent;
-          aa_e1.innerHTML= "j’ " +cc.getElementsByTagName("e1").item(i).textContent;
-          aa_e2.innerHTML= "tu " +cc.getElementsByTagName("e2").item(i).textContent;
-          aa_e3.innerHTML= "il " +cc.getElementsByTagName("e3").item(i).textContent;
-          aa_e4.innerHTML= "nous " +cc.getElementsByTagName("e4").item(i).textContent;
-          aa_e5.innerHTML= "vous " +cc.getElementsByTagName("e5").item(i).textContent;
-          aa_e6.innerHTML= "ils " +cc.getElementsByTagName("e6").item(i).textContent;
+          aa_e1.innerHTML= "que j’ " +cc.getElementsByTagName("e1").item(i).textContent;
+          aa_e2.innerHTML= " que tu " +cc.getElementsByTagName("e2").item(i).textContent;
+          aa_e3.innerHTML= " qu’il " +cc.getElementsByTagName("e3").item(i).textContent;
+          aa_e4.innerHTML= "que nous " +cc.getElementsByTagName("e4").item(i).textContent;
+          aa_e5.innerHTML= " que vous " +cc.getElementsByTagName("e5").item(i).textContent;
+          aa_e6.innerHTML= " qu’ils " +cc.getElementsByTagName("e6").item(i).textContent;
           aa_f1.innerHTML= " " +cc.getElementsByTagName("f1").item(i).textContent;
           aa_f2.innerHTML= " " +cc.getElementsByTagName("f2").item(i).textContent;
           aa_f3.innerHTML= " " +cc.getElementsByTagName("f3").item(i).textContent;
