--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Saira+Stencil+One&display=swap" rel="stylesheet">
 </header>
   
   
+<style>
+#aa_verb{font-family: 'Saira Stencil One', cursive;}
+</style>
+
 
 
 
@@ -44,7 +49,7 @@
 </div>
 
 <!-- show verb conjugation table-->
-<div class="pull-left">
+<div class="pull-left" style="margin-left: 20px;">
 <h1 id="aa_verb"></h3>
 <h3  id="aa_meaning"></h3>
 <table class="table table-striped">
