--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <!--press button image-->
         <div>
-        <img src="./pressbutton.jpeg" class="img-responsive center-block" onclick="aaa()"
+        <img src="./pressbutton.jpeg" class="img-responsive center-block" onclick="aaa(i=Math.round(Math.random()*944))"
         </div><br/><br/>
 
 <div class="container-fluid">
