--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         #aa_meaning{font-family: 'Courgette', cursive; }
         .mytense{font-family: 'Alegreya', serif; font-size: 130%; }
         pre{ font-family: 'Amaranth', sans-serif;}
+        td:hover{background-color:steelblue; color:white; font-weight: bold; font-smooth:always;}
 </style>
 
 <body class="container"><br/><br/>
