--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<link href="https://fonts.googleapis.com/css?family=Amaranth|Concert+One|Alegreya|Courgette&display=swap" rel="stylesheet">
-
-
+        <link href="https://fonts.googleapis.com/css?family=Amaranth|Concert+One|Alegreya|Courgette&display=swap" rel="stylesheet">
 </header>
 <style>
         #mytitle{ font-family: 'Concert One', cursive;}
         #aa_verb{ font-family: 'Amaranth', sans-serif;}
         #aa_meaning{font-family: 'Courgette', cursive; }
-        .mytense{font-family: 'Alegreya', serif; font-size: 130%; }
+        .mytense{font-family: 'Alegreya', serif; font-size: 130%; text-align: center; }
         pre{ font-family: 'Amaranth', sans-serif;}
-       div{padding:5px; margin:5px;}
+        html, body, div, button{padding:1px; margin:0px;}
         td:hover, button:hover{background-color:steelblue; color:white; font-weight: bold; font-smooth:always;}
 </style>
 
@@ -40,8 +38,8 @@
         </div><br/><br/> 
 
 <div class="container-fluid row center-block" style="width:100%;">
-<div class="col-xs-2 ">
 <!-- navigation section-->
+<div id="myNavigation" class="col-xs-2">
         <pre style="min-width:100px; min-height: 800px; display:block; overflow-x:hidden;" class="pre-scrollable">
        </pre>
 
@@ -74,7 +72,7 @@
         <div class="col-xs-9" style="margin-left: 20px;">
         <h1 id="aa_verb" class="text-center" style="margin:0;"></h3>
         <h3  id="aa_meaning" class="text-center" style="margin-top:0;"></h3>
-        <table class="table table-striped table-hover table-condensed table-responsive"  style="display: flex; flex:auto; justify-content:center;">
+        <table class="table table-striped table-hover table-condensed table-responsive"  style="display: flex; flex:auto; justify-content:center;" >
         <tbody>
         <tr>
           <td class="mytense info" style="margin-bottom:0; padding-bottom:0;">Présent</td>
@@ -110,14 +108,14 @@
         </tr>
         <tr>
           <td class="mytense info" style="margin-bottom:0; padding-bottom:0;">Passé compose</td>
-          <td  id="aa_e1" style="margin-bottom:0; padding-bottom:0;"></td>
+          <td  id="aa_e1" style="margin-bottom:0; padding-bottom:0; vertical-align:bottom;"></td>
         </tr>
         <tr>
           <td style="margin-bottom:0; padding-bottom:0;">j'ai, tu as, il a,</td>
           <td  id="aa_e2" style="margin-bottom:0; padding-bottom:0;"></td>
         </tr>
         <tr>
-          <td style="margin-bottom:0; padding-bottom:0;">nous avons, vous avez, ils ont</td>
+          <td style="margin-bottom:0; padding-bottom:0;">nous avons, vous avez, ils ont : </td>
           <td  id="aa_e3" style="margin-bottom:0; padding-bottom:0;"></td>
         </tr>
         <tr>
@@ -137,7 +135,7 @@
           <td class="mytense info" style="margin-bottom:0; padding-bottom:0;">Conditionnel</td>
         </tr>
         <tr>
-          <td style="margin-bottom:0; padding-bottom:0;">(I was doing, i used to do)</td>
+          <td style="margin-bottom:0; padding-bottom:0; text-align: center; ">(I was doing, i used to do)</td>
           <td id="aa_g1" style="margin-bottom:0; padding-bottom:0;"></td>
         </tr>
         <tr>
